--- a/learn/styles/style.css
+++ b/learn/styles/style.css
@@ -99,6 +99,7 @@ nav .logo-title {
     background-color: #ffffff;
     border-left: 1px solid #e0e0e0;
     box-shadow: 4px 0 10px rgba(0, 0, 0, 0.05); /* Subtle shadow */
+    overflow: scroll;
 }
 
 /* Styling for unit line */
