--- a/learn/styles/style.css
+++ b/learn/styles/style.css
@@ -100,6 +100,12 @@ nav img {
     align-items: center;
 }
 
+.level {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 /* Level button styles */
 .level-btn {
     width: 70px;
@@ -149,8 +155,8 @@ nav img {
 
 /* Intro level */
 .intro-level {
-    position: absolute;
-    right: 30%;
+    /* position: absolute;
+    right: 30%; */
     background-color: #f1f8e9; /* Light green background */
     padding: 20px 25px;
     display: none;
@@ -159,13 +165,12 @@ nav img {
     border-radius: 12px;
     box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.05);
     z-index: 10;
-    min-width: 320px;
+    width: 320px;
     transition: transform 0.3s ease;
 }
 
 .intro-level.show {
-    display: flex;
-    transform: translateY(-50%) scale(1);
+    transform: translateY(10%) scale(1);
 }
 
 /* Start button */
